--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
         password: ${{ secrets.SCALEWAY_API_KEY }}
         registry: ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}
     - name: Build the Docker image
-      run: docker build . -t ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/groupe-2
+      run: docker build . -t ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
     - name: Push the Docker Image
-      run: docker push ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/groupe-2
+      run: docker push ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
 
 
     # - uses: actions/checkout@v4
