--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,29 +25,16 @@ jobs:
     - name: Push the Docker Image
       run: docker push ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
 
-
-    # - uses: actions/checkout@v4
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile --tag zach27/atut-bootcamp:v1
-    # - name: Login to Docker Hub
-    #   uses: docker/login-action@v3
-    #   with:
-    #     ecr: auto
-    #     logout: true
-    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-    # - name: Extract metadata (labels, tags, etc.) for Docker
-    #   id: meta
-    #   uses: docker/metadata-action@v5
-    #   with:
-    #     images: zach27/atut-bootcamp:v0
-    # - name: Build and push Docker image
-    #   uses: docker/build-push-action@v5
-    #   with:
-    #       context: .
-    #       file: ./Dockerfile
-    #       push: true
-    #       tags: zach27/atut-bootcamp:v1
-    #       labels: ${{ steps.meta.outputs.labels }}
-
-    
+          - name: Deploy to remote server
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.DEPLOYMENT_SERVER_IP }}  # L'adresse IP ou le nom de domaine du serveur distant
+        username: ${{ secrets.DEPLOYMENT_USER }}  # Le nom d'utilisateur SSH pour se connecter au serveur distant
+        key: ${{ secrets.DEPLOYMENT_SSH_KEY }}  # La clé privée SSH pour l'authentification
+        passphrase: ${{ secrets.DEPLOYMENT_SSH_PASSPHRASE }}  # La passphrase de la clé privée SSH
+        script: |
+          echo "Deploying Docker image to remote server..."
+          docker pull ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
+          docker stop my-container || true
+          docker rm my-container || true
+          docker run -d --name my-container -p 8022:8022 ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
