--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -20,18 +19,18 @@ jobs:
         username: nologin
         password: ${{ secrets.SCALEWAY_API_KEY }}
         registry: ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}
+
     - name: Build the Docker image
       run: docker build . -t ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
+
     - name: Push the Docker Image
       run: docker push ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
-
-          - name: Deploy to remote server
+    - name: Deploy to remote server  # Cette ligne était mal indentée
       uses: appleboy/ssh-action@v1.0.3
       with:
-        host: ${{ secrets.DEPLOYMENT_SERVER_IP }}  # L'adresse IP ou le nom de domaine du serveur distant
-        username: ${{ secrets.DEPLOYMENT_USER }}  # Le nom d'utilisateur SSH pour se connecter au serveur distant
-        key: ${{ secrets.DEPLOYMENT_SSH_KEY }}  # La clé privée SSH pour l'authentification
-        passphrase: ${{ secrets.DEPLOYMENT_SSH_PASSPHRASE }}  # La passphrase de la clé privée SSH
+        host: ${{ secrets.DEPLOYMENT_SERVER_IP }}
+        username: ${{ secrets.DEPLOYMENT_USER }}
+        key: ${{ secrets.DEPLOYMENT_SSH_KEY }}
         script: |
           echo "Deploying Docker image to remote server..."
           docker pull ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
