--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,24 @@ jobs:
 
     - name: Build the Docker image
       run: docker build . -t ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
+jobs:
 
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      uses: actions/checkout@v4
+    - name: Login to Scaleway Container Registry
+      uses: docker/login-action@v3
+      with:
+        username: nologin
+        password: ${{ secrets.SCALEWAY_API_KEY }}
+        registry: ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}
+        
     - name: Push the Docker Image
       run: docker push ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/jojo:latest
-    - name: Deploy to remote server  # Cette ligne était mal indentée
+
+    - name: Deploy to remote server  
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.DEPLOYMENT_SERVER_IP }}
